[gd_scene load_steps=32 format=3 uid="uid://byvaf71dnten0"]

[ext_resource type="Script" path="res://scenes/audio/audio_manager.gd" id="1_bhbve"]
[ext_resource type="AudioStream" uid="uid://bi8dingytba6n" path="res://assets/audio/MUSICBackground.ogg" id="2_orrgw"]
[ext_resource type="Script" path="res://scenes/audio/background_music.gd" id="3_nqq0y"]
[ext_resource type="AudioStream" uid="uid://bd3b5f42356ie" path="res://assets/audio/MUSICBackground2.ogg" id="4_6ypxi"]
[ext_resource type="AudioStream" uid="uid://bjcr5du8bdd7i" path="res://assets/audio/MUSICBackground3.ogg" id="5_rafbv"]
[ext_resource type="AudioStream" uid="uid://cb6li3lvgxaox" path="res://assets/audio/MUSICBackground4.ogg" id="6_eclkr"]
[ext_resource type="AudioStream" uid="uid://bqp5mx7qsue42" path="res://assets/audio/MUSICBackground5.ogg" id="7_wk83b"]
[ext_resource type="AudioStream" uid="uid://c6tajhavixgha" path="res://assets/audio/SFXFireLOOP.ogg" id="8_sytsk"]
[ext_resource type="Script" path="res://scenes/audio/fire_audio.gd" id="9_ck8sq"]
[ext_resource type="Script" path="res://scenes/audio/tool_bar_audio.gd" id="10_yawyw"]
[ext_resource type="Script" path="res://scenes/audio/audio_randomizer.gd" id="11_citxa"]
[ext_resource type="AudioStream" uid="uid://b5iybe17vtcm5" path="res://assets/audio/SFXMagicBoltSelected.ogg" id="12_r0p02"]
[ext_resource type="AudioStream" uid="uid://dfykpd75drack" path="res://assets/audio/SFXTorchSelected.ogg" id="13_ecr1l"]
[ext_resource type="AudioStream" uid="uid://bwy3k3hsarsjf" path="res://assets/audio/SFXMenuPause.ogg" id="14_e2tyb"]
[ext_resource type="AudioStream" uid="uid://ckrrxrss41ydo" path="res://assets/audio/SFXPotionSelected.ogg" id="15_heev4"]
[ext_resource type="AudioStream" uid="uid://8ujajk7k8kqf" path="res://assets/audio/SFXSummonSelected.ogg" id="16_kq2p4"]
[ext_resource type="AudioStream" uid="uid://sl2rq8fwd4mh" path="res://assets/audio/SFXMagicBoltCast2.ogg" id="17_m5nbl"]
[ext_resource type="AudioStream" uid="uid://o23of6cpw8qf" path="res://assets/audio/SFXMagicBoltCast3.ogg" id="18_oy7wn"]
[ext_resource type="AudioStream" uid="uid://bt50416hqjcxb" path="res://assets/audio/SFXMagicBoltCast.ogg" id="19_yqve8"]
[ext_resource type="AudioStream" uid="uid://1lf81bxd8lv" path="res://assets/audio/SFXTorchThrow2.ogg" id="20_rcrds"]
[ext_resource type="AudioStream" uid="uid://vte5efiqisp7" path="res://assets/audio/SFXTorchThrow3.ogg" id="21_7r3fy"]
[ext_resource type="AudioStream" uid="uid://c0god3bplix1" path="res://assets/audio/SFXTorchThrow.ogg" id="22_ihtbv"]
[ext_resource type="AudioStream" uid="uid://bx485s10qbsuq" path="res://assets/audio/SFXPotionThrow.ogg" id="23_ebb2j"]
[ext_resource type="AudioStream" uid="uid://dh5yd5227d7un" path="res://assets/audio/SFXPotionThrow2.ogg" id="24_s617e"]
[ext_resource type="AudioStream" uid="uid://bj1altj7pui7m" path="res://assets/audio/SFXPotionThrow3.ogg" id="25_5h15s"]
[ext_resource type="AudioStream" uid="uid://0ompo3r7kiab" path="res://assets/audio/SFXMenuButtonSelect.ogg" id="26_55ia7"]
[ext_resource type="AudioStream" uid="uid://jpu776c5cfpm" path="res://assets/audio/SFXPotionBreaks2.ogg" id="27_yjcx8"]
[ext_resource type="AudioStream" uid="uid://dp01ou2w0jlqc" path="res://assets/audio/SFXPotionsBreaks3.ogg" id="28_judc8"]
[ext_resource type="AudioStream" uid="uid://dme4j5gng2i3k" path="res://assets/audio/SFXPickaxeHit.ogg" id="29_2jejg"]
[ext_resource type="AudioStream" uid="uid://b2nopdgqiolbn" path="res://assets/audio/SFXSummon.ogg" id="30_jbxm8"]
[ext_resource type="AudioStream" uid="uid://dcjmp2fm33o6m" path="res://assets/audio/SFXMagicBoltHitsEnemy.ogg" id="31_7u417"]

[node name="AudioManager" type="Node2D"]
script = ExtResource("1_bhbve")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
stream = ExtResource("2_orrgw")
autoplay = true
bus = &"Music"
script = ExtResource("3_nqq0y")
tracks = Array[AudioStream]([ExtResource("2_orrgw"), ExtResource("4_6ypxi"), ExtResource("5_rafbv"), ExtResource("6_eclkr"), ExtResource("7_wk83b"), ExtResource("4_6ypxi")])

[node name="FireAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_sytsk")
volume_db = -5.0
bus = &"Effects"
script = ExtResource("9_ck8sq")

[node name="ToolBarAudio" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("10_yawyw")

[node name="EquipAttackAudio" type="AudioStreamPlayer" parent="ToolBarAudio"]
unique_name_in_owner = true
volume_db = -10.0
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("12_r0p02")])

[node name="EquipTorchAudio" type="AudioStreamPlayer" parent="ToolBarAudio"]
unique_name_in_owner = true
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("13_ecr1l")])

[node name="EquipPickaxeAudio" type="AudioStreamPlayer" parent="ToolBarAudio"]
unique_name_in_owner = true
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("14_e2tyb")])

[node name="EquipPotionAudio" type="AudioStreamPlayer" parent="ToolBarAudio"]
unique_name_in_owner = true
volume_db = -10.0
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("15_heev4")])

[node name="EquipSummonAudio" type="AudioStreamPlayer" parent="ToolBarAudio"]
unique_name_in_owner = true
volume_db = -5.0
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("16_kq2p4")])

[node name="DoAttackAudio" type="AudioStreamPlayer" parent="ToolBarAudio"]
unique_name_in_owner = true
volume_db = -10.0
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("17_m5nbl"), ExtResource("18_oy7wn"), ExtResource("19_yqve8")])

[node name="DoTorchAudio" type="AudioStreamPlayer" parent="ToolBarAudio"]
unique_name_in_owner = true
volume_db = -10.0
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("20_rcrds"), ExtResource("21_7r3fy"), ExtResource("22_ihtbv")])

[node name="DoPickaxeAudio" type="AudioStreamPlayer" parent="ToolBarAudio"]
unique_name_in_owner = true
volume_db = 5.0
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("23_ebb2j"), ExtResource("24_s617e"), ExtResource("25_5h15s")])

[node name="DoSummonAudio" type="AudioStreamPlayer" parent="ToolBarAudio"]
unique_name_in_owner = true
volume_db = 5.0
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("23_ebb2j"), ExtResource("24_s617e"), ExtResource("25_5h15s")])
min_pitch = 1.1
max_pitch = 1.3

[node name="DoPotionAudio" type="AudioStreamPlayer" parent="ToolBarAudio"]
unique_name_in_owner = true
volume_db = 5.0
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("23_ebb2j"), ExtResource("24_s617e"), ExtResource("25_5h15s")])

[node name="PauseAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
volume_db = -15.0
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("14_e2tyb")])
min_pitch = 1.0
max_pitch = 1.0

[node name="UnpauseAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
volume_db = -15.0
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("26_55ia7")])
min_pitch = 1.0
max_pitch = 1.0

[node name="SplashAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
volume_db = -10.0
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("27_yjcx8"), ExtResource("28_judc8")])
min_pitch = 0.75
max_pitch = 1.0

[node name="PickaxeAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
volume_db = -10.0
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("29_2jejg")])
min_pitch = 0.7
max_pitch = 0.9

[node name="SummonAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
volume_db = -10.0
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("30_jbxm8")])
min_pitch = 0.75
max_pitch = 1.2

[node name="DeathAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"Effects"
script = ExtResource("11_citxa")
audio_tracks = Array[AudioStream]([ExtResource("31_7u417")])
min_pitch = 1.0
max_pitch = 1.3
